Add vampire forest to overwold gen